; ModuleID = '/home/carl/AnghaBench/linux/drivers/hwtracing/intel_th/extr_msu.c_msc_buffer_free.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/hwtracing/intel_th/extr_msu.c_msc_buffer_free.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.msc = type { i64 }

@MSC_MODE_SINGLE = common dso_local global i64 0, align 8
@MSC_MODE_MULTI = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.msc*)* @msc_buffer_free to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @msc_buffer_free(%struct.msc* %0) #0 {
  %2 = alloca %struct.msc*, align 8
  store %struct.msc* %0, %struct.msc** %2, align 8
  %3 = load %struct.msc*, %struct.msc** %2, align 8
  %4 = getelementptr inbounds %struct.msc, %struct.msc* %3, i32 0, i32 0
  %5 = load i64, i64* %4, align 8
  %6 = load i64, i64* @MSC_MODE_SINGLE, align 8
  %7 = icmp eq i64 %5, %6
  br i1 %7, label %8, label %11

8:                                                ; preds = %1
  %9 = load %struct.msc*, %struct.msc** %2, align 8
  %10 = call i32 @msc_buffer_contig_free(%struct.msc* %9)
  br label %21

11:                                               ; preds = %1
  %12 = load %struct.msc*, %struct.msc** %2, align 8
  %13 = getelementptr inbounds %struct.msc, %struct.msc* %12, i32 0, i32 0
  %14 = load i64, i64* %13, align 8
  %15 = load i64, i64* @MSC_MODE_MULTI, align 8
  %16 = icmp eq i64 %14, %15
  br i1 %16, label %17, label %20

17:                                               ; preds = %11
  %18 = load %struct.msc*, %struct.msc** %2, align 8
  %19 = call i32 @msc_buffer_multi_free(%struct.msc* %18)
  br label %20

20:                                               ; preds = %17, %11
  br label %21

21:                                               ; preds = %20, %8
  ret void
}

declare dso_local i32 @msc_buffer_contig_free(%struct.msc*) #1

declare dso_local i32 @msc_buffer_multi_free(%struct.msc*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
